# reply_drone

./: .gitignore  Cargo.toml  README.md  build.sh  exrtocubemap.py  hyperparameters.toml  main.py  mesh_viewer.py  odm_mesh.gltf  pyproject.toml
APIs/: barcode_classifier_environment_wrapper.py  barcode_classifier_rl_agent.py  engine_barcode_classifier.py  engine_environment_wrapper.py  engine_integrity_agent.py  engine_main.py  engine_rl_agent.py  environement_wrapper_rl_agent.py  integrity_agent_engine.py  rl_agent_engine.py
assets/: .gitignore
barcodeclassifier/: .gitignore  README.md  conf_formula.yaml  pyproject.toml
barcodeclassifier/models/: tinycnn_labels.pt
barcodeclassifier/src/barcodeclassifier/: APIs.py  __init__.py  evaluate_cnn.py  runtime_inference.py  train_cnn.py
barcodeclassifier/src/barcodeclassifier/data/: loader.py
barcodeclassifier/src/barcodeclassifier/models/: cnn.py
barcodeclassifier/src/barcodeclassifier/utils/: fast_rect.py  generate_synth_patches.py
bevyengine/: Cargo.toml
bevyengine/src/: main.rs  random_cuboid.rs  scene_generation.rs
crates/dataset_generation/: Cargo.toml
crates/dataset_generation/src/: components.rs  features.rs  image_capture.rs  main.rs  scene_generation.rs
crates/dataset_processing/: Cargo.toml
crates/dataset_processing/src/: image_processing.rs  main.rs  masking_step.wgsl  mean.rs  mean.wgsl
crates/reply_drone/: Cargo.toml
crates/reply_drone/src/: backend.rs  components.rs  depthmap.rs  helper.rs  lib.rs  reader.rs  screenshot.rs  types.rs
dataset_generation/: Cargo.toml
dataset_generation/assets/shaders/: black_white.wgsl
dataset_generation/src/: features.rs  main.rs  scene_generation.rs
example/: main.py
odm_texturing/: odm_textured_model_geo.mtl
scripts/: exrtocubemap.py  sample_textures.sh
src/: backend.rs  commands.rs  constants.rs  depthmap.rs  helper.rs  input.rs  lib.rs  screenshot.rs
src/agent/: buffer.py  cleanrl.py  model_attributes.py  models.py  processors.py  trainer.py  types.py  utils.py
src/anew/: __main__.py  generators.py
src/engine/: __init__.py  __main__.py  api.py
src/reply_drone/: __init__.py
src/reply_drone/agent/: trainer.py  types.py
src/vision_model/: __init__.py  __main__.py  dataset.py  inference.py  model.py  train.py  trainer.py
v2/: README.md  pyproject.toml
v2/src/v2/: __init__.py  cnn.py
