[project]

name = "reply-drone"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sander-hergarten", email = "mail@sander-hergarten.de" }
]
dependencies = [
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "scipy>=1.15.2",
    "wandb>=0.19.10",

]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "imageio[freeimage,pyav,tifffile]>=2.37.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "jupyter>=1.1.1",
    "tyro>=0.9.19",
    "pillow>=11.2.1",
    "matplotlib>=3.10.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]

packages = ["src/reply_drone", "src/engine"]

[tool.maturin]
features = ["pyo3/extension-module"]
