[project]
name = "reply-drone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "imageio[freeimage,opencv,pyav]>=2.37.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "tyro>=1.0.2",
]

