[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sander-hergarten", email = "mail@sander-hergarten.de" }
]
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/v2"]
