[package]
name = "dataset_generation"
version = "0.1.0"
edition = "2024"

[features]
default = []
headless = []

[dependencies]
bevy_capture = "0.4.1"
bevy_rapier3d = "0.32.0"
iyes_perf_ui = "0.5.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }
rand = "0.9.1"
rand_distr = "0.4.3"

[dependencies.bevy]
version = "0.17"
features = [
    "jpeg",
    "exr"
]
